test/files/neg/t8325-b.scala

trait Test {
  def k(is: Int*} = ???
}
